# packages/backend/tsoa/swagger.json
@@ -53,15 +53,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"ColumnGetAllDTO": {
-				"items": {
-					"$ref": "#/components/schemas/Column"
-				},
-				"type": "array"
-			},
-			"ColumnGetOneDTO": {
-				"$ref": "#/components/schemas/Column"
-			},
 			"Pick_Column.Exclude_keyofColumn.id-or-cards__": {
 				"properties": {
 					"columnName": {
@@ -99,7 +90,10 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ColumnGetAllDTO"
+									"items": {
+										"$ref": "#/components/schemas/Column"
+									},
+									"type": "array"
 								}
 							}
 						}
@@ -117,7 +111,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ColumnGetOneDTO"
+									"$ref": "#/components/schemas/Column"
 								}
 							}
 						}
@@ -149,7 +143,7 @@
 								"schema": {
 									"allOf": [
 										{
-											"$ref": "#/components/schemas/ColumnGetOneDTO"
+											"$ref": "#/components/schemas/Column"
 										}
 									],
 									"nullable": true
